removed placeholder debug text

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     </div>
     <canvas id="myCanvas" width="800" height="240"></canvas>
     <div>
-        <div id="ballVelocity">huh</div>
-        <div id="ballCoord">what</div>
-        <div id="input">what</div>
-        <div id="power">what</div>
+        <div id="ballVelocity"></div>
+        <div id="ballCoord"></div>
+        <div id="input"></div>
+        <div id="power"></div>
     </div>
 
     <script>
