Stopped ball from going through table

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             ballVelocity = { x: 0, y: 0 };
             firePower = 0;
             aimAngle = isLeft ? 0 : 180;
+            ballFell = false;
             updateText(false);
         }
 
