--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background: white;
             display: block;
             margin: 0 auto;
-            stroke: black;
+            border: solid black 1px;
 
         }
 
